--- a/pom.xml
+++ b/pom.xml
@@ -9,17 +9,38 @@
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
+        <!---Selenium Web Driver-->
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-server</artifactId>
             <version>2.45.0</version>
         </dependency>
+
+        <!--- TestNG -->
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>6.8.21</version>
         </dependency>
 
+        <!--- recorder -->
+        <dependency>
+            <groupId>org.monte</groupId>
+            <artifactId>monte-screen-recorder</artifactId>
+            <version>0.7.7</version>
+        </dependency>
+
+        <!--- Logger log4j -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.4.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.4.1</version>
+        </dependency>
 
     </dependencies>
 
